test: fix integration tests + switch from mockito-core to mockito-inline [BACKLOG-43745]